# checkprefix

./: README.rst  setup.cfg
checkprefix/: choices.py  utils.py
