[metadata]
name = checkprefix
version = 1.0
description = django-prefix_verification
long_description = django-prefix_verification is a Django app to verify if the prefix of nation is valid or return the prefix for country
author = Rosario Amantia, Jessica Chiara Catania, Gianluca Di Franco
license = BSD
license_files = LICENSE

[options]
include_package_data = true
packages = find:
python_requires = >=3.6